<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/nav_first_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home_fragment_drawer_title"
            android:checkable="true"/>

        <item
            android:id="@+id/phraseBookFragment"
            android:icon="@drawable/ic_phrasebook"
            android:title="@string/phraseBook_fragment_drawer_title"
            android:checkable="true"/>
    </group>

    <group
        android:id="@+id/nav_second_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/settings_fragment_drawer_title"
            android:checkable="true"/>
    </group>

</menu>