...
        <variable
            name="viewModel"
            type="com.example.translatorapp.ui.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/parent_settings_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:elevation="6dp"
        tools:context=".ui.settings.SettingsFragment">
...
